--- a/Suspicion/Makefile
+++ b/Suspicion/Makefile
@@ -4,3 +4,12 @@ JC = javac
 .SUFFIXES: .java .class
 .java.class:
 	$(JC) $(JFLAGS) $*.java
+
+CLASSES = \
+	TaylorPRoberts.java \
+	Suspicion.java \
+
+default: classes
+
+classes: $(CLASSES:.java=.class)
+
