--- a/Suspicion/Makefile
+++ b/Suspicion/Makefile
@@ -6,9 +6,21 @@ JC = javac
 	$(JC) $(JFLAGS) $*.java
 
 CLASSES = \
-	*.java
+	TaylorPRoberts.java \
+	Suspicion.java \
+	ArgHandler.java \
+	Bot.java \
+	Card.java \
+	Deck.java \
+	Dice.java \
+	Display.java \
+	DummyBot.java \
+	Location.java \
+	Player.java \
+	RBot.java \
+	RBotDumb.java \
+	TextDisplay.java \
 
 default: classes
 
 classes: $(CLASSES:.java=.class)
-
